--- a/trunk/of/app/views/openfoundry/_staticities.rhtml
+++ b/trunk/of/app/views/openfoundry/_staticities.rhtml
@@ -5,10 +5,8 @@
   <li><%=_('Online Users')%>: 
   <br/>
   <% online_users.each_with_index do |u,i| %>
-    <%= user_portrait_link u %> 
-    <% if i%4 == 3 %>
-      <br/>
-    <%end%>
+    <%= user_portrait_link(u, :float => 'left') %>
   <%end%>
+  <br clear="all"/>
   </li>
 </ul>
