--- a/of/app/views/rt/index.rhtml
+++ b/of/app/views/rt/index.rhtml
@@ -59,7 +59,7 @@
 
 <div id="rt_function_bar">
   <%if(@project != nil)%>
-  <a href="<%=@rt_url%>/Ticket/Create.html?Queue=<%=@project.id%>" target="of_module" class="bug_report">問題回報</a>
+  <a href="<%=@rt_url%>Ticket/Create.html?Queue=<%=@project.id%>" target="of_module" class="bug_report">問題回報</a>
   <%end%>
   &nbsp;&nbsp;<a href="#" onclick="hideDiv('TicketSearchForm');" class="search">查詢</a>
 <div style="" id="TicketSearchForm">
@@ -90,7 +90,6 @@
   </ul>
   <input type="button" value="送出查詢" onclick="TicketSearch()" class="button"/>
 </div>
-  &nbsp;&nbsp;<a href="<%=@rt_url%>/Search/Build.html" target="of_module" class="search">進階查詢</a>
 </div>
 
 <input type="hidden" id="TicketSearchString" value="<%=@base_url%>" />
