--- a/trunk/of/app/views/news/list.rhtml
+++ b/trunk/of/app/views/news/list.rhtml
@@ -12,7 +12,7 @@
     <%else%>
       <%= link_to h(news.subject), news1_path(:id => news.id, :project_id => news.catid), :class => "news_subject" %>
     <%end%>
-    <%=news.updated_at.strftime("(%Y/%m/%d)")%>
+    <%=tz_date(news.updated_at)%>
     <p><%=h(news.description.chars[0..270].gsub(/<[^>]*>/,' ')) %>...&nbsp;
     (
     <%if news.catid == 0%>
