--- a/trunk/of/app/views/user/login.rhtml
+++ b/trunk/of/app/views/user/login.rhtml
@@ -1,4 +1,5 @@
 <h1><%= _("Login to OpenFoundry") %></h1>
+<div id="Flash"><%= show_flash %></div>
 <% form_tag '/user/login' do -%>
 <table id="LoginForm" class="form-table" title="Login Form" summary="Login Form" >
   <tr>
