--- a/trunk/of/app/views/layouts/application.rhtml
+++ b/trunk/of/app/views/layouts/application.rhtml
@@ -79,6 +79,8 @@
       <div id="LeftMenu">
         <%=render :partial => "partials/project_menu", :locals => {:project => @project}%>
       </div>
+    <%elsif controller.controller_name == "help"%>
+      <%=render :partial => "partials/help_menu"%>
     <%else%>
       <div id="HomeLeft">
         <%= render :partial => 'openfoundry/staticities', :locals => {:userCount => User.count(), :projectCount => Project.count(:conditions => Project.in_used_projects()), :online_users => Session.online_users} %>
