--- a/of/app/views/partials/_help_menu.rhtml
+++ b/of/app/views/partials/_help_menu.rhtml
@@ -1,5 +1,10 @@
 <div id="HomeLeft">
 
+<h3>OpenFoundry</h3>
+<ol>
+  <li><a href="/help">關於本手冊</a></li>
+</ol>
+
 <h3>版本控制系統</h3>
 <ol>
   <li><a class="option" href="./vcs#%E5%89%8D%E8%A8%80">前言</a></li>
