--- a/of/app/views/partials/_top_menu_data.rhtml
+++ b/of/app/views/partials/_top_menu_data.rhtml
@@ -61,6 +61,12 @@ var menudata=
         {id:'<%=_('menu_Contact Us')%>', url:'mailto:contact@openfoundry.org'},
         {id:'<%=_('Bug Report')%>', url:'/projects/1/rt'}
       ]
+    },
+    {id:'<%=_('Help')%>', url:'/help',
+      submenu:[
+        {id:'<%=_('OpenFoundry')%>', url:'/help'},
+        {id:'<%=_('Version Control')%>', url:'/help/vcs'}
+      ]
     }
    <% if current_user.has_role? 'site_admin' %>
     ,{id:'<%=_('menu_Site Admin')%>', url:'/site_admin',
