--- a/trunk/of/app/views/help/vcs.rhtml
+++ b/trunk/of/app/views/help/vcs.rhtml
@@ -1,24 +1,21 @@
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
-BODY, P, DIV, H1, H2, H3, H4, H5, H6, ADDRESS, OL, UL, TITLE, TD, OPTION, SELECT {
+#BODY, P, DIV, H1, H2, H3, H4, H5, H6, ADDRESS, OL, UL, TITLE, TD, OPTION, SELECT {
  font-family: Verdana;
  
 }
 
-BODY, P, DIV, ADDRESS, OL, UL, LI, TITLE, TD, OPTION, SELECT {  
+#BODY, P, DIV, ADDRESS, OL, UL, LI, TITLE, TD, OPTION, SELECT {  
   font-size: 10.0pt;
   margin-top:0pt;  
   margin-bottom:0pt;  
 } 
 
-BODY, P {
+#BODY, P {
   margin-left:0pt; 
   margin-right:0pt;
 }
 
-BODY {
+#BODY {
   line-height: ;
 
   margin: 6px;
@@ -44,10 +41,7 @@ h1, h2, h3, h4, h5, h6 { color:#2867A5; }
 
 
 
-</head>
-
-
-<body revision="dcs6scgd_5zhst2b:968">
+<span revision="dcs6scgd_5zhst2b:968"/>
 
 <h1>
   目錄
@@ -1239,5 +1233,3 @@ Available subcommands:<br>
 <br>
 <br>
 <br>
-<br></body>
-</html>
