--- a/trunk/of/app/views/projects/vcs_access.rhtml
+++ b/trunk/of/app/views/projects/vcs_access.rhtml
@@ -8,8 +8,8 @@ when Project::VCS[:SUBVERSION]
   <br/><b><%= @src %></b>
 </p>
 <p><%= h(@vcs_desc) %></p>
-<p><a href="http://rt.openfoundry.org/Foundry/Help/vcs/OpenFoundry%20_.html#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
-AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB" target="_blank">See more instruction</a>.</p>
+<p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
+AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB">See more instruction</a>.</p>
 
 <% when Project::VCS[:CVS] -%>
 <h1><%= _('Anonymous CVS Access') %></h1>
@@ -18,8 +18,8 @@ AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB" target="_blank">See more instructi
   <br/><b><%= @src %></b>
 </p>
 <p><%= h(@vcs_desc) %></p>
-<p><a href="http://rt.openfoundry.org/Foundry/Help/vcs/OpenFoundry%20_.html#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
-AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB" target="_blank">See more instruction</a>.</p>
+<p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
+AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB">See more instruction</a>.</p>
 
 <% when Project::VCS[:REMOTE] -%>
 <h1><%= _('Remote Repository') %></h1>
