--- a/trunk/of/app/views/partials/_help_menu.rhtml
+++ b/trunk/of/app/views/partials/_help_menu.rhtml
@@ -7,24 +7,24 @@
 
 <h3>版本控制系統</h3>
 <ol>
-  <li><a class="option" href="./vcs#%E5%89%8D%E8%A8%80">前言</a></li>
-  <li><a class="option" href="./vcs#%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E7%B3%BB%E7%B5%B1%E6%83%B3%E8%A6%81%E8%A7%A3%E6%B1%BA%E7%9A%84%E5%95%8F%E9%A1%8C">版本控制系統想要解決的問題</a></li>
-  <li><a class="option" href="./vcs#%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E7%B3%BB%E7%B5%B1%E6%A6%82%E8%BF%B0_--_%E4%BB%A5_Subversion_%E7%82%BA%E4%BE%8B">版本控制系統概述 -- 以 Subversion 為例</a></li>
-  <li><a class="option" href="./vcs#SVN_%E6%83%85%E5%A2%83%E5%B0%8E%E8%A6%BD">SVN 情境導覽</a></li>
-  <li><a class="option" href="./vcs#%E9%91%84%E9%80%A0%E5%A0%B4%E6%8F%90%E4%BE%9B%E7%9A%84%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E6%9C%8D%E5%8B%99">鑄造場提供的版本控制服務</a></li>
+  <li><a class="option" href="/help/vcs#%E5%89%8D%E8%A8%80">前言</a></li>
+  <li><a class="option" href="/help/vcs#%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E7%B3%BB%E7%B5%B1%E6%83%B3%E8%A6%81%E8%A7%A3%E6%B1%BA%E7%9A%84%E5%95%8F%E9%A1%8C">版本控制系統想要解決的問題</a></li>
+  <li><a class="option" href="/help/vcs#%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E7%B3%BB%E7%B5%B1%E6%A6%82%E8%BF%B0_--_%E4%BB%A5_Subversion_%E7%82%BA%E4%BE%8B">版本控制系統概述 -- 以 Subversion 為例</a></li>
+  <li><a class="option" href="/help/vcs#SVN_%E6%83%85%E5%A2%83%E5%B0%8E%E8%A6%BD">SVN 情境導覽</a></li>
+  <li><a class="option" href="/help/vcs#%E9%91%84%E9%80%A0%E5%A0%B4%E6%8F%90%E4%BE%9B%E7%9A%84%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E6%9C%8D%E5%8B%99">鑄造場提供的版本控制服務</a></li>
   <ul>
-    <li><a class="option" href="./vcs#%E5%90%8D%E8%A9%9E%E7%B8%AE%E5%AF%AB">名詞縮寫</a></li>
-    <li><a class="option" href="./vcs#%E9%81%B8%E6%93%87%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E7%B3%BB%E7%B5%B1" title="選擇版本控制系統">選擇版本控制系統</a></li>
-    <li><a class="option" href="./vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB">透過命令列存取SVN檔案庫</a></li>
-    <li><a class="option" href="./vcs#%E7%B0%A1%E4%BB%8BSVN%E8%A6%96%E7%AA%97%E5%8C%96%E6%87%89%E7%94%A8%E7%A8%8B%E5%BC%8F-_TortoiseSVN">簡介SVN視窗化應用程式- TortoiseSVN</a></li>
-    <li><a class="option" href="./vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB">透過命令列存取CVS檔案庫</a></li>
-    <li><a class="option" href="./vcs#%E7%B0%A1%E4%BB%8BCVS%E8%A6%96%E7%AA%97%E5%8C%96%E6%87%89%E7%94%A8%E7%A8%8B%E5%BC%8F-_WinCVS">簡介CVS視窗化應用程式- WinCVS</a></li>
-    <li><a class="option" href="./vcs#%E4%BD%BF%E7%94%A8VIEWVC%E7%80%8F%E8%A6%BD%E9%91%84%E9%80%A0%E5%A0%B4%E6%AA%94%E6%A1%88%E5%BA%AB">使用VIEWVC瀏覽鑄造場檔案庫</a></li>
+    <li><a class="option" href="/help/vcs#%E5%90%8D%E8%A9%9E%E7%B8%AE%E5%AF%AB">名詞縮寫</a></li>
+    <li><a class="option" href="/help/vcs#%E9%81%B8%E6%93%87%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E7%B3%BB%E7%B5%B1" title="選擇版本控制系統">選擇版本控制系統</a></li>
+    <li><a class="option" href="/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB">透過命令列存取SVN檔案庫</a></li>
+    <li><a class="option" href="/help/vcs#%E7%B0%A1%E4%BB%8BSVN%E8%A6%96%E7%AA%97%E5%8C%96%E6%87%89%E7%94%A8%E7%A8%8B%E5%BC%8F-_TortoiseSVN">簡介SVN視窗化應用程式- TortoiseSVN</a></li>
+    <li><a class="option" href="/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB">透過命令列存取CVS檔案庫</a></li>
+    <li><a class="option" href="/help/vcs#%E7%B0%A1%E4%BB%8BCVS%E8%A6%96%E7%AA%97%E5%8C%96%E6%87%89%E7%94%A8%E7%A8%8B%E5%BC%8F-_WinCVS">簡介CVS視窗化應用程式- WinCVS</a></li>
+    <li><a class="option" href="/help/vcs#%E4%BD%BF%E7%94%A8VIEWVC%E7%80%8F%E8%A6%BD%E9%91%84%E9%80%A0%E5%A0%B4%E6%AA%94%E6%A1%88%E5%BA%AB">使用VIEWVC瀏覽鑄造場檔案庫</a></li>
   </ul>
-  <li><a class="option" href="./vcs#Subversion_book%E7%B8%BD%E8%A6%BD">Subversion book總覽</a></li>
-  <li><a class="option" href="./vcs#SVN%E5%91%BD%E4%BB%A4%E4%B8%80%E8%A6%BD">SVN命令一覽</a></li>
-  <li><a class="option" href="./vcs#%E5%8F%83%E8%80%83%E8%B3%87%E6%96%99">參考資料</a></li>
-  <li><a class="option" href="./vcs#%E7%9B%B8%E9%97%9C%E8%B3%87%E6%BA%90">相關資源</a></li>
+  <li><a class="option" href="/help/vcs#Subversion_book%E7%B8%BD%E8%A6%BD">Subversion book總覽</a></li>
+  <li><a class="option" href="/help/vcs#SVN%E5%91%BD%E4%BB%A4%E4%B8%80%E8%A6%BD">SVN命令一覽</a></li>
+  <li><a class="option" href="/help/vcs#%E5%8F%83%E8%80%83%E8%B3%87%E6%96%99">參考資料</a></li>
+  <li><a class="option" href="/help/vcs#%E7%9B%B8%E9%97%9C%E8%B3%87%E6%BA%90">相關資源</a></li>
 </ol>
 
 </div>
