--- a/of/app/views/projects/_roles_users_selection.rhtml
+++ b/of/app/views/projects/_roles_users_selection.rhtml
@@ -1,3 +1,3 @@
  <center>
- <%= user_portrait_link( user,:with_login => true) %>    
+   <%= user_portrait_link( user,:with_login => true, :link => false) %>    
 </center>
