--- a/trunk/of/app/views/projects/member_edit.rhtml
+++ b/trunk/of/app/views/projects/member_edit.rhtml
@@ -66,7 +66,7 @@
       </div>
       <%= drop_receiving_element drop_id,
         :onDrop => "function(drag_element, drop_element, event){
-      if (confirm(\"#{escape_javascript(_('This will add User form this Group, are you  sure?'))}\"))
+      if (confirm(\"#{escape_javascript(_('This will add User to this Group, are you sure?'))}\"))
       {#{remote_function(:update => 'MainContent',
       :url => {:controller => :projects,
       :action => :member_change,
