--- a/of/app/views/releases/_file_view.rhtml
+++ b/of/app/views/releases/_file_view.rhtml
@@ -23,8 +23,10 @@
         <%= link_to_remote '[remove]',:url => removefile_release_url({
             :project_id => @project.id,
             :id => @release.id,
-            :removefile_id => @file.id
-          }), :update => "uploadfiles_view"
+            :removefile_id => f.id
+          }),
+          :confirm => 'Delete?', 
+          :update => "uploadfiles_view"
         %>
 	<%= link_to '[download]', download_url(:project_name => @project.name, 
 					       :release_version => @release.version,
