--- a/trunk/of/app/views/nscreports/new.rhtml
+++ b/trunk/of/app/views/nscreports/new.rhtml
@@ -1,10 +1,22 @@
 Please upload your reports/reviews here. <br/><br/>
 
+<script>
+  function validate(file_name, type) {
+    var ext = /review/.test(type) ? ".doc" : ".pdf";
+    var regex = new RegExp(ext + '$', 'i');
+    if (regex.test(file_name)) {
+      return "true"
+    } else {
+      alert('Please upload a ' + ext + ' file.');
+      return false;
+    }
+  }
+</script>
 <% @types_write.each do |x| %>
-  <% form_tag({:action => "create"}, {:multipart => true}) do %>
-    Year: <%= text_field_tag "year", NSC_CURRENT_YEAR, :readonly => true %><br/>
-    Type: <%= text_field_tag "type", x, :readonly => true %><br/>
-    File: <%= file_field_tag "the_file" %>
+  <% form_tag({:action => "create"}, {:multipart => true, :onSubmit => "return validate(this.the_file.value, '#{x}')"}) do %>
+    Year: <%= text_field_tag "year", NSC_CURRENT_YEAR, :readonly => true, :size => 30 %><br/>
+    Type: <%= text_field_tag "type", x, :readonly => true, :size => 30 %><br/>
+    File: <%= file_field_tag "the_file", :size => 30 %>
     <%= submit_tag "Upload" %>
   <% end %>
   <hr/> 
