--- a/of/app/views/releases/_file_view.rhtml
+++ b/of/app/views/releases/_file_view.rhtml
@@ -13,14 +13,14 @@
 <td> <%= number_to_human_size(@file.size) %> </td>
 </tr>
 </table>
-        <%= link_to_remote '[edit]',:url => editfile_release_url({
+        <%= link_to_remote '[Edit]',:url => editfile_release_url({
             :project_id => @project.id,
             :id => @release.id,
             :editfile_id => @file.id,
             :div_id => params[:div_id],
           }), :update => params[:div_id]
         %>
-        <%= link_to_remote '[remove]',:url => removefile_release_url({
+        <%= link_to_remote '[Remove]',:url => removefile_release_url({
             :project_id => @project.id,
             :id => @release.id,
             :removefile_id => @file.id
@@ -28,7 +28,7 @@
           :confirm => 'Delete?', 
           :update => "uploadfiles_view"
         %>
-	<%= link_to '[download]', download_url(:project_name => @project.name, 
+	<%= link_to '[Download]', download_url(:project_name => @project.name, 
 					       :release_version => @release.version,
 					       :file_name => @file.path )
         %>
