--- a/of/app/views/releases/uploadfiles.rhtml
+++ b/of/app/views/releases/uploadfiles.rhtml
@@ -16,22 +16,22 @@
 <td> <%= h(Release.status_to_s(@release.status)) %> </td>
 </tr>
 </table>
-        <%= link_to_remote _('[edit]'),:url => editrelease_release_url({
+        <%= link_to_remote _('[Edit]'),:url => editrelease_release_url({
             :project_id => @project.id,
             :id => @release.id,
           }), :update => "editrelease_view"
         %>
-        <%= link_to _('[news]'), new_release_news_url({
-            :release_id => @release.id,
-          })
-        %>
-        <%= link_to _('[delete]'), delete_release_url(
+        <%= link_to _('[Delete]'), delete_release_url(
           {
             :project_id => @project.id, 
             :id => @release.id
           }), 
           :confirm => 'Delete?', 
           :method => :post
+        %>
+        <%= link_to _('[Add release news]'), new_release_news_url({
+            :release_id => @release.id,
+          })
         %>
     </div>
     </fieldset>
@@ -56,14 +56,14 @@
 <td> <%= number_to_human_size(f.size) %> </td>
 </tr>
 </table>
-        <%= link_to_remote '[edit]',:url => editfile_release_url({
+        <%= link_to_remote '[Edit]',:url => editfile_release_url({
             :project_id => @project.id,
             :id => @release.id,
             :editfile_id => f.id,
             :div_id => "editfiles_view#{i}",
           }), :update => "editfiles_view#{i}"
         %>
-        <%= link_to_remote '[remove]',:url => removefile_release_url({
+        <%= link_to_remote '[Remove]',:url => removefile_release_url({
             :project_id => @project.id,
             :id => @release.id,
             :removefile_id => f.id
@@ -71,7 +71,7 @@
           :confirm => 'Delete?', 
           :update => "uploadfiles_view"
         %>
-	<%= link_to '[download]', download_url(:project_name => @project.name, 
+	<%= link_to '[Download]', download_url(:project_name => @project.name, 
 					       :release_version => @release.version,
 					       :file_name => f.path )
         %>
