user: invite user to whoswho, newslettet, contact list when user/signup

--- a/of/app/views/user/signup.rhtml
+++ b/of/app/views/user/signup.rhtml
@@ -10,6 +10,8 @@
       <br/>
       <%= render :partial => 'privacy', :locals => { :f => f, :user => @user, :submit => false} %>
       <br/>
+      <%= render :partial => 'invite', :locals => { :f => f, :user => @user} %>
+      <br/>
       <div id=generate_captcha_image>
         <%= render :partial => 'partials/captcha' %>
       </div>
