layout: add CITI logo

--- a/of/app/views/layouts/application.rhtml
+++ b/of/app/views/layouts/application.rhtml
@@ -103,6 +103,9 @@
           <a href="http://web.nsc.gov.tw/default.asp" target="_blank">
             <img src="http://www.openfoundry.org/images/stories/nsc.jpg" title="行政院國家科學委員會">
           </a>
+          <a href="http://www.citi.sinica.edu.tw/" target="_blank">
+            <img src="http://www.openfoundry.org/images/stories/ITIAS_LOGO.jpg" title="Research Center for Information Technology Innovation Academia Sinica">
+          </a>
         </div>
 
       </div>
