site_admin: batch add many users to a role

--- a/of/app/views/site_admin/site_admin/index.rhtml
+++ b/of/app/views/site_admin/site_admin/index.rhtml
@@ -52,3 +52,6 @@ Agent: <%= request.user_agent%>
 
 <h3>監控與分析</h3>
 <a href="https://www.google.com/analytics/reporting/?scid=5220412">Google Analytic</a>
+
+<p>
+<%= link_to _("大量加入使用者成為某角色"), {:action => :batch_add_users } %>
