survey: add i18n to views

--- a/of/app/views/survey/apply.html.erb
+++ b/of/app/views/survey/apply.html.erb
@@ -24,5 +24,5 @@
     <input class="SurveyItem" id="SurveyItem" name="downloader[<%=item%>]">
   <%end%>
 </dl>
-<input type="submit" value="<%= s_('Survey|Submit') %>"/> 
+<input type="submit" value="<%= s_('survey|Submit') %>"/> 
 <% end %>
