survey: add flash

--- a/of/app/views/survey/apply.html.erb
+++ b/of/app/views/survey/apply.html.erb
@@ -2,6 +2,7 @@
   prompt = @survey.prompt
   resource = @survey.resource
 %>
+<div id="Flash"><%= show_flash %></div>
   <div id="result">
   </div>
   <% form_for @downloader, 
